--- a/src/components/common/scrollToTop/ScrollToTopButton.css
+++ b/src/components/common/scrollToTop/ScrollToTopButton.css
@@ -13,6 +13,7 @@
 	cursor: pointer;
 	animation: floating 1.5s infinite ease-in-out;
 	transition: opacity 0.3s;
+	z-index: 10;
 }
 
 .scroll-to-top-button.visible {
