--- a/src/components/common/modalDashboard/ModalDashboardStyles.css
+++ b/src/components/common/modalDashboard/ModalDashboardStyles.css
@@ -11,3 +11,13 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     background-color: rgba(255, 255, 255, 0.8);
 }
+
+.fotoProduct{
+    display: block;
+    object-fit: cover;
+    /* padding: 0px; */
+    width: 40%;
+    aspect-ratio: 16/9;
+    border: none;
+    border-radius: 8px;
+}
