--- a/src/components/common/modalDashboard/ModalDashboardStyles.css
+++ b/src/components/common/modalDashboard/ModalDashboardStyles.css
@@ -10,6 +10,7 @@
     min-height: 120px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     background-color: rgba(255, 255, 255, 0.8);
+    overflow-y: auto;
 }
 
 .fotoProduct{
